[package]
name = "streaming-harness"
version = "0.1.1"
authors = ["Andrea Lattuada <andrea.lattuada@inf.ethz.ch>"]

description = "A benchmarking harness for streaming systems"
license = "MIT"

[features]
default = []
hdrhist-support = ["streaming-harness-hdrhist"]
timely-support = ["timely"]

[dependencies]
num-traits = "^0.2"
timely = { version = "^0.6", optional = true }
streaming-harness-hdrhist = { version = "^0.2", optional = true }

[dev-dependencies]
rand = "^0.5"

[[example]]
name = "timely-word-count"
required-features = ["hdrhist-support", "timely-support"]
