[package]
name = "streaming-harness"
version = "0.2.0"
authors = ["Andrea Lattuada <andrea.lattuada@inf.ethz.ch>"]

description = "A benchmarking harness for streaming systems"
license = "MIT"

[features]
default = []
hdrhist-support = ["hdrhist"]
timely-support = ["timely"]

[dependencies]
num-traits = "^0.2"
timely = { version = "^0.6", optional = true }
hdrhist = { version = "^0.5", optional = true }

[dev-dependencies]
rand = "^0.5"

[[example]]
name = "timely-word-count"
required-features = ["hdrhist-support", "timely-support"]
